2008-10-22  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidUnnecessarySpecializationRule.cs: Handle 'ref' parameters
	correctly. Ignore generic constraints if there's more than one (since
	we don't consider them properly). Fix reporting to avoid stuff like 
	"could be of '!0'."

2008-10-21  Néstor Salceda  <nestor.salceda@gmail.com>

	* Makefile.am: Removed common stuff in order to reduce duplication with
	other Makefiles.

2008-10-19  Néstor Salceda  <nestor.salceda@gmail.com>

	* Makefile.am: Added support for generating the documentation files to
	the build process.

2008-10-19  Néstor Salceda  <nestor.salceda@gmail.com>

	* doc/index.xml, doc/ns-Gendarme.Rules.Maintainability.xml,
	doc/Gendarme.Rules.Maintainability: With the new code in the Makefiles
	we don't need to keep the documentation files in the repository.

2008-10-16  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidUnnecessarySpecializationRule.cs: Remove dead code/line.

2008-10-15  Néstor Salceda  <nestor.salceda@gmail.com>

	* doc/: Initial import documentation for the rules which belongs to this
	category.

2008-10-15  Cedric Vivier  <cedricv@neonux.com>

	* AvoidUnnecessarySpecializationRule.cs: Fix style issues.
	Remove unnecessary .ToArray()s.

2008-10-15  Cedric Vivier  <cedricv@neonux.com>

	* AvoidUnnecessarySpecializationRule.cs: Do something sensible
	if a resolution fails during the navigation of the depth inheritance.
	This also fixes GenericAddBar test failure happening since rev.115089.

2008-10-15  Cedric Vivier  <cedricv@neonux.com>

	* AvoidUnnecessarySpecializationRule.cs: Refactoring to fix
	FalsePositive test and another cases such as in the new
	SuggestMethodReferenceInsteadOfIMethodSignature test when
	a parameter is used through different interfaces.

2008-10-08  Sebastien Pouliot  <sebastien@ximian.com>

	* PreferStringIsNullOrEmptyRule.cs: Fix a false positive that can
	happen when checking if a string is stricly empty - which generates